@@ -26,7 +26,7 @@ In a script:
     use Runtime::Debugger;
     repl;
 
-On the commandline):
+On the commandline:
 
     perl -MRuntime::Debugger -E 'repl'
 
@@ -114,17 +114,21 @@ Sample Output:
     > print $var2
     1
 
-## Genesis
+## This Module
 
 While debugging some long-running, perl,
 Selenium test files, I basically got bored
-and created a simple Read Evaluate Print Loop
-(REPL). Originally I would have a hot key
+during the long waits, and created a simple
+Read Evaluate Print Loop (REPL) to avoid
+the annoyong waits between test tries.
+
+Originally I would have a hot key
 command to drop in a snippet of code like
-this into my test code to essentially insert a breakpoint/pause.
+this into my test code to essentially insert
+a breakpoint/pause.
 
 One can then examine what's going on in that
-area of code and evaluate some code.
+area of code.
 
 Originally the repl code snippet was something
 as simple as this:
@@ -145,22 +149,22 @@ field before text could be entered).
 And I was quite satisfied.
 
 From there, this module increased in features
-such as using `Term::ReadLine` for a more
-natural readline support, tab completion,
-and history (up arrow).
+such as using `Term::ReadLine` for readline
+support,tab completion, and history (up arrow).
 
-## Attempted Solutions
+### Attempts
 
 This module has changed in its approach quite a
 few times since it turns out to be quite tricky
 to perform `eval_in_scope`.
 
-### Source Filter
+#### Source Filter
 
 To make usage of this module as simple as
 possible, I tried my hand at source filters.
 
-My idea was that by simply adding this line of code:
+My idea was that by simply adding this line
+of code:
 
     use Runtime::Debugger;
 
@@ -175,7 +179,9 @@ read as a string then evaled.
 So, source filters, despite how clean they would
 make my solution, would not work for my use cases.
 
-### Back To Eval
+Next idea.
+
+#### Back To Eval
 
 Then I decided to go back to using a command like:
 
@@ -187,7 +193,7 @@ code and eval would use the current scope to
 apply the code.
 
 Side note: other Debuggers I had tried before this
-one could not update lexical variables in the
+one, do not update lexical variables in the
 current scope. So this, I think, is unique in this debugger.
 
 #### Next pitfall
@@ -212,9 +218,9 @@ same eval line would print undef afterwards.
 Using `eval run` is still possible (for now).
 
 Just be aware that it does not evaluate correctly
-under certaini circumstances.
+under certain circumstances.
 
-## Current Solution
+## Solution
 
 Simply add these lines:
 
@@ -254,10 +260,23 @@ In order to eval a string of perl code correctly,
 we need to figure out at which level the variable
 is located.
 
+Thats not hard to do: just look through increasing
+`caller()` levels until finding the first whose
+package name is not thia module's.
+
 #### Peek
 
 Given the scope level, peek\_my/our is utilized
-to grab all the variables.
+to grab all the variables in that scope.
+
+Having these variables:
+
+    my  $var = 111;
+    our $var = 222;
+
+There can only be a single variable (glob) of
+a name. When multiple, the lexical one would
+be used.
 
 #### Preprocess
 
@@ -268,16 +287,29 @@ At this stage variables would be replaced which
 their equivalent representation at found in
 peek\_my/our.
 
+This code:
+
+    say $var
+
+Might be replaced with something like this:
+
+    say ${$PEEKS{'$var'}}
+
+This transformation would normally be down
+seamlessly and hidden from the user.
+
 #### Eval
 
 Finally, eval the string.
 
+And we pretend to have done `eval_in_scope`.
+
 ### Future Ideas
 
 One idea would be to create an XS function
-which can perform an eval in specific scope,
-but naturally without the translation magic
-that is currently being done.
+which can perform an eval in a specific scope,
+but without the translation magic that is
+currently being done.
 
 This might appear like peek\_my, but for eval.
 So something like this:
@@ -288,13 +320,14 @@ So something like this:
 
 ## run
 
-Runs the REPL (dont forget eval!)
+DEPRECATED! (Use `repl` instead)
+
+Runs the REPL.
 
     eval run
 
-Sets `$@` to the exit reason like 'INT' (Control-C) or 'q' (Normal exit/quit).
-
-Do NOT use this unless for oneliners (which do not support source filters).
+Sets `$@` to the exit reason like
+'INT' (Control-C) or 'q' (Normal exit/quit).
 
 Note: This method is more stable than repl(), but at the same
 time has limits. [See also](#lossy-undef-variable)
@@ -313,31 +346,32 @@ Try to insert the peek\_my/our references
 (peeks) only when needed (should appear
 natural to the user).
 
-Should NOT transform this:
-
-    say "%h"
-
-Instead, this:
+Ok to transform:
 
     say "@a"
 
-Might be transformed into:
+NOT ok to transform:
 
-    say "@{$repl->{peeks_all}{'@a'}}";
+    say "%h"
 
 ## Tab Completion
 
 This module has rich, DWIM tab completion support:
 
-    - Press TAB with no input to view commands and available variables in the current scope.
-    - Press TAB after an arrow ("->") to auto append either a "{" or "[" or "(".
-       This depends on the type of variable before it.
-    - Press TAB after a hash (or hash object) to list available keys.
-    - Press TAB anywhere else to list variables.
+    Press TAB when:
+
+    - No input - view commands and variables.
+
+    - After arrow ("->") - to auto append either a "{" or "[" or "(".
+      (Depends on variable type)
+
+    - After a hash) - show keys.
+
+    - Otherwise - show variables.
 
 ## \_match
 
-Returns the possible matches:
+Wrapper to simplify completion function.
 
 Input:
 
@@ -345,6 +379,8 @@ Input:
     partial => STRING,   # Default: ""  - What you typed so far.
     prepend => "STRING", # Default: ""  - prepend to each possiblity.
     nospace => 0,        # Default: "0" - will not append a space after a completion.
+
+Returns the possible matches:
 
 ## help
 
@@ -372,14 +408,17 @@ Can show more:
 
 ## d
 
-You can use "d" as a print command which can show a simple or complex data structure.
-
 Data::Dumper::Dump anything.
+
+You can use "d" as a print command which
+can show a simple or complex data structure.
 
     d 123
     d [1, 2, 3]
 
-## Data::Printer
+## p
+
+Data::Printer::p
 
 You can use "p" as a print command which
 can show a simple or complex data structure
@@ -398,7 +437,7 @@ Some example uses:
 
 Returns a unique list of elements.
 
-List::Util in at least perl v5.16 does not
+List::Util in lower than v5.26 does not
 provide a unique function.
 
 ## Internal Properties
@@ -421,7 +460,8 @@ Install required library:
 
     sudo apt install libreadline-dev
 
-Enable this environmental variable to show debugging information:
+Enable this environmental variable to
+show debugging information:
 
     RUNTIME_DEBUGGER_DEBUG=1
 
@@ -447,7 +487,9 @@ Tim Potapov, `<tim.potapov[AT]gmail.com>` 🐪🥷
 
 ## Control-C
 
-Doing a Control-C may occassionally break the output in your terminal.
+Doing a Control-C may occassionally break
+the output in your terminal (exit with 'q'
+when possible).
 
 Simply run any one of these:
 
@@ -457,23 +499,27 @@ Simply run any one of these:
 
 ## New Variables
 
-Currently it is not possible to create new lexicals (my) variables.
+Currently it is not possible to create new
+lexicals (my) variables.
 
-I have not yet found a way to run "eval" with a higher scope of lexicals.
-(perhaps there is another way?)
+You can create new global variables by:
 
-You can make global variables though if:
+    - Default
+      $var=123
 
-    - By default ($var=123)
-    - Using our (our $var=123)
-    - Given the full path ($My::var = 123)
+    - Using our
+      $our $var=123
+
+    - Given the full path
+      $My::var = 123
 
 ## Lossy undef Variable
 
-inside a long running (and perhaps complicated) script, a variable
-may become undef.
+inside a long running (and perhaps complicated)
+script, a variable may become undef.
 
-This piece of code demonstrates the problem with using c&lt;eval run>.
+This piece of code demonstrates the problem
+with using c&lt;eval run>.
 
     sub Func {
         my ($code) = @_;
@@ -484,22 +530,25 @@ This piece of code demonstrates the problem with using c&lt;eval run>.
         my $v2 = 222;
 
         # This causes issues.
-        use Runtime::Debugger -nofilter;
+        use Runtime::Debugger;
         eval run;
 
-        # Whereas, this one uses a source filter and works.
+        # Whereas, this one works.
         use Runtime::Debugger;
+        repl;
     });
 
 This issue is described here [https://www.perlmonks.org/?node\_id=11158351](https://www.perlmonks.org/?node_id=11158351)
 
 ## Other
 
-Please report any (other) bugs or feature requests to [https://github.com/poti1/runtime-debugger/issues](https://github.com/poti1/runtime-debugger/issues).
+Please report any (other) bugs or feature
+requests to [https://github.com/poti1/runtime-debugger/issues](https://github.com/poti1/runtime-debugger/issues).
 
 # SUPPORT
 
-You can find documentation for this module with the perldoc command.
+You can find documentation for this module
+with the perldoc command.
 
     perldoc Runtime::Debugger
 
